# Low-Latency-Market-Data-Research-Platform

./: .dockerignore  .gitignore  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
apps/trader-dashboard/: README.md
contracts/: README.md  topics.md
contracts/api/: rest.md  websocket.md
contracts/events/: bar-1s-event.v1.schema.json  market-event.v1.schema.json  quality-alert-event.v1.schema.json  quote-event.v1.schema.json  rolling-metrics-event.v1.schema.json  top-of-book-event.v1.schema.json  trade-event.v1.schema.json
contracts/mcp/: tools.md
contracts/redis/: keys.md
docs/: architecture.md  backup-recovery.md  data-contracts.md  databento-demo.md  mcp-examples.md  obsidian-rag.md  operational-model.md  performance.md  production-readiness.md  roadmap.md
docs/decisions/: 0001-architecture-scope.md
docs/incidents/: INC-001-sequence-gap.md
docs/runbooks/: databricks-job-failure.md  flink-failure.md  mcp-tool-failure.md  redis-divergence.md  sequence-gap.md  stale-symbol.md
infra/: README.md  docker-compose.yml  flink-job.Dockerfile  python-service.Dockerfile
infra/gcp/: README.md
infra/images/: README.md
infra/kubernetes/: README.md
infra/postgres/: pgvector.sql
infra/secrets/: README.md
lakehouse/: README.md
market_platform/: __init__.py  config.py  databento_adapter.py  events.py  redis_keys.py  serde.py  stream_state.py  time.py  topics.py
observability/: README.md  logging-schema.json  metrics.yml
scripts/: README.md  load-test-local.py  run-local-demo.sh  run-mvp-flink.sh  validate-production-artifacts.py
services/: README.md
tests/: README.md
(+81 files in other folders)
