[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "low-latency-market-data-platform"
version = "0.1.0"
description = "Local POC for a low-latency market data and research platform."
requires-python = ">=3.9"
dependencies = [
  "aiokafka>=0.10.0",
  "fastapi>=0.110.0",
  "jsonschema>=4.21.0",
  "psycopg[binary]>=3.1.18",
  "redis>=5.0.0",
  "uvicorn[standard]>=0.27.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["market_platform*"]
